--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,11 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# vscode config directory
+.vscode/*
+
+# cmake build directory
+build/*
+
+.gitignore
